--- a/favorite.html
+++ b/favorite.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <!-- Required meta tags -->
     <meta charset="UTF-8" />
@@ -18,6 +19,7 @@
     <!-- Custom style  -->
     <link rel="stylesheet" href="css/style.css" />
 </head>
+
 <body>
     <!-- ================ Header ================= -->
     <header>
@@ -43,7 +45,6 @@
                     <a class="navLink" href="index.html"> Home </a>
                     <a class="navLink" href="categories.html"> categories </a>
                     <a class="navLink" href="listing.html"> listing </a>
-                    <a class="navLink" href="posts.html"> Posts </a>
                     <a class="navLink" href="chats.html"> Chats </a>
                     <a class="navLink" href="contactUs.html"> contact us </a>
                 </ul>
@@ -60,10 +61,10 @@
                     </button>
                     <div class="dropdown-menu" aria-labelledby="myAccount">
                         <a href="login.html" class="dropdown-item"> login </a>
-                        <a href="profile.html" class="dropdown-item"> profile </a>
+                        <a href="myPosts.html" class="dropdown-item"> My Posts</a>
                         <a href="notifications.html" class="dropdown-item"> notifications </a>
-                        <a href="editProfile.html" class="dropdown-item"> edit Profile </a>
-                        <a href="#!" class="dropdown-item"> logout </a>
+                        <a href="editmyPosts.html" class="dropdown-item"> edit Profile </a>
+                        <a href="login.html" class="dropdown-item"> logout </a>
                     </div>
                 </div>
                 <a href="#!" class="link" data-bs-toggle="tooltip" title=" language "> ع </a>
@@ -102,12 +103,11 @@
                             </div>
                         </div>
                         <div class="profileNavCol">
-                            <a href="profile.html"> <img src="img/icons/profile.svg" alt=""> profile </a>
+                            <a href="myPosts.html"> <img src="img/icons/myPosts.svg" alt=""> my posts </a>
                             <a href="notifications.html"> <img src="img/icons/notifications.svg" alt=""> notifications
                             </a>
                             <a href="bought.html"> <img src="img/icons/bought.svg" alt=""> Bought </a>
-                            <a class="active" href="favorite.html"> <img src="img/icons/favorite.svg" alt=""> Favorite
-                            </a>
+                            <a href="favorite.html"> <img src="img/icons/favorite.svg" alt=""> Favorite </a>
                             <a href="truYou.html"> <img src="img/icons/truYou.svg" alt=""> TruYou </a>
                             <a href="editProfile.html"> <img src="img/icons/editProfile.svg" alt=""> edit Profile </a>
                             <a href="login.html"> <img src="img/icons/logout.svg" alt=""> logout </a>
@@ -206,4 +206,5 @@
     <script src="js/main.js"></script>
     <script src="js/custom.js"></script>
 </body>
+
 </html>
