--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <!-- Required meta tags -->
   <meta charset="UTF-8" />
@@ -18,6 +19,7 @@
   <!-- Custom style  -->
   <link rel="stylesheet" href="css/style.css" />
 </head>
+
 <body>
   <!-- ================ loader ================= -->
   <!-- <div class="preloader">
@@ -47,7 +49,6 @@
           <a class="navLink" href="index.html"> Home </a>
           <a class="navLink" href="categories.html"> categories </a>
           <a class="navLink" href="listing.html"> listing </a>
-          <a class="navLink" href="posts.html"> Posts </a>
           <a class="navLink" href="chats.html"> Chats </a>
           <a class="navLink" href="contactUs.html"> contact us </a>
         </ul>
@@ -63,10 +64,10 @@
           </button>
           <div class="dropdown-menu" aria-labelledby="myAccount">
             <a href="login.html" class="dropdown-item"> login </a>
-            <a href="profile.html" class="dropdown-item"> profile </a>
+            <a href="myPosts.html" class="dropdown-item"> My Posts</a>
             <a href="notifications.html" class="dropdown-item"> notifications </a>
-            <a href="editProfile.html" class="dropdown-item"> <img src="img/icons/editProfile.svg" alt=""> edit Profile </a>
-            <a href="#!" class="dropdown-item"> <img src="img/icons/logout.svg" alt=""> logout </a>
+            <a href="editmyPosts.html" class="dropdown-item"> edit Profile </a>
+            <a href="login.html" class="dropdown-item"> logout </a>
           </div>
         </div>
         <a href="#!" class="link" data-bs-toggle="tooltip" title=" language "> ع </a>
@@ -312,6 +313,7 @@
                     loaded with 8GB RAM and 256GB SSD.
                   </p>
                   <div class="location"> <img src="img/icons/location.svg" alt=""> <span> USA, California </span> </div>
+                  <span class="promoted"> promoted </span>
                   <div class="itemBottom">
                     <a href="listing.html" class="category"> <span class="img"> <img src="img/categories/icon (1).svg"
                           alt="">
@@ -338,6 +340,7 @@
                     loaded with 8GB RAM and 256GB SSD.
                   </p>
                   <div class="location"> <img src="img/icons/location.svg" alt=""> <span> USA, California </span> </div>
+                  <span class="promoted"> promoted </span>
                   <div class="itemBottom">
                     <a href="listing.html" class="category"> <span class="img"> <img src="img/categories/icon (1).svg"
                           alt="">
@@ -416,6 +419,7 @@
                     loaded with 8GB RAM and 256GB SSD.
                   </p>
                   <div class="location"> <img src="img/icons/location.svg" alt=""> <span> USA, California </span> </div>
+                  <span class="promoted"> promoted </span>
                   <div class="itemBottom">
                     <a href="listing.html" class="category"> <span class="img"> <img src="img/categories/icon (1).svg"
                           alt="">
@@ -442,6 +446,7 @@
                     loaded with 8GB RAM and 256GB SSD.
                   </p>
                   <div class="location"> <img src="img/icons/location.svg" alt=""> <span> USA, California </span> </div>
+                  <span class="promoted"> promoted </span>
                   <div class="itemBottom">
                     <a href="listing.html" class="category"> <span class="img"> <img src="img/categories/icon (1).svg"
                           alt="">
@@ -468,6 +473,7 @@
                     loaded with 8GB RAM and 256GB SSD.
                   </p>
                   <div class="location"> <img src="img/icons/location.svg" alt=""> <span> USA, California </span> </div>
+                  <span class="promoted"> promoted </span>
                   <div class="itemBottom">
                     <a href="listing.html" class="category"> <span class="img"> <img src="img/categories/icon (1).svg"
                           alt="">
@@ -548,6 +554,7 @@
                     </p>
                     <div class="location"> <img src="img/icons/location.svg" alt=""> <span> USA, California </span>
                     </div>
+                    <span class="promoted"> promoted </span>
                     <div class="itemBottom">
                       <a href="listing.html" class="category"> <span class="img"> <img src="img/categories/icon (1).svg"
                             alt="">
@@ -575,6 +582,7 @@
                     </p>
                     <div class="location"> <img src="img/icons/location.svg" alt=""> <span> USA, California </span>
                     </div>
+                    <span class="promoted"> promoted </span>
                     <div class="itemBottom">
                       <a href="listing.html" class="category"> <span class="img"> <img src="img/categories/icon (1).svg"
                             alt="">
@@ -602,6 +610,7 @@
                     </p>
                     <div class="location"> <img src="img/icons/location.svg" alt=""> <span> USA, California </span>
                     </div>
+                    <span class="promoted"> promoted </span>
                     <div class="itemBottom">
                       <a href="listing.html" class="category"> <span class="img"> <img src="img/categories/icon (1).svg"
                             alt="">
@@ -629,6 +638,7 @@
                     </p>
                     <div class="location"> <img src="img/icons/location.svg" alt=""> <span> USA, California </span>
                     </div>
+                    <span class="promoted"> promoted </span>
                     <div class="itemBottom">
                       <a href="listing.html" class="category"> <span class="img"> <img src="img/categories/icon (1).svg"
                             alt="">
@@ -656,6 +666,7 @@
                     </p>
                     <div class="location"> <img src="img/icons/location.svg" alt=""> <span> USA, California </span>
                     </div>
+                    <span class="promoted"> promoted </span>
                     <div class="itemBottom">
                       <a href="listing.html" class="category"> <span class="img"> <img src="img/categories/icon (1).svg"
                             alt="">
@@ -683,6 +694,7 @@
                     </p>
                     <div class="location"> <img src="img/icons/location.svg" alt=""> <span> USA, California </span>
                     </div>
+                    <span class="promoted"> promoted </span>
                     <div class="itemBottom">
                       <a href="listing.html" class="category"> <span class="img"> <img src="img/categories/icon (1).svg"
                             alt="">
@@ -1906,4 +1918,5 @@
   <script src="js/main.js"></script>
   <script src="js/custom.js"></script>
 </body>
+
 </html>
