--- a/register.html
+++ b/register.html
@@ -45,7 +45,6 @@
           <a class="navLink" href="index.html"> Home </a>
           <a class="navLink" href="categories.html"> categories </a>
           <a class="navLink" href="listing.html"> listing </a>
-          <a class="navLink" href="posts.html"> Posts </a>
           <a class="navLink" href="chats.html"> Chats </a>
           <a class="navLink" href="contactUs.html"> contact us </a>
         </ul>
@@ -59,13 +58,13 @@
             aria-haspopup="true" aria-expanded="false">
             <img src="img/icons/user.svg" alt="">
           </button>
-          <div class="dropdown-menu" aria-labelledby="myAccount">
-            <a href="login.html" class="dropdown-item"> login </a>
-            <a href="profile.html" class="dropdown-item"> profile </a>
-            <a href="notifications.html" class="dropdown-item"> notifications </a>
-            <a href="editProfile.html" class="dropdown-item"> <img src="img/icons/editProfile.svg" alt=""> edit Profile </a>
-            <a href="#!" class="dropdown-item"> <img src="img/icons/logout.svg" alt=""> logout </a>
-          </div>
+                    <div class="dropdown-menu" aria-labelledby="myAccount">
+                        <a href="login.html" class="dropdown-item"> login </a>
+                        <a href="myPosts.html" class="dropdown-item"> My Posts</a>
+                        <a href="notifications.html" class="dropdown-item"> notifications </a>
+                        <a href="editmyPosts.html" class="dropdown-item"> edit Profile </a>
+                        <a href="login.html" class="dropdown-item"> logout </a>
+                    </div>
         </div>
         <a href="#!" class="link" data-bs-toggle="tooltip" title=" language "> ع </a>
       </div>
@@ -90,7 +89,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 col-lg-6 col-xl-5 m-auto p-2">
-            <form action="profile.html" class="cardForm" data-aos="fade-up">
+            <form action="myPosts.html" class="cardForm" data-aos="fade-up">
               <div class="profileImage">
                 <input type="file" id="profileImageInput" accept="image/*" />
                 <label for="profileImageInput" class="profileImageLabel">
