--- a/listing.html
+++ b/listing.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <!-- Required meta tags -->
   <meta charset="UTF-8" />
@@ -19,7 +18,6 @@
   <!-- Custom style  -->
   <link rel="stylesheet" href="css/style.css" />
 </head>
-
 <body>
   <!-- ================ Header ================= -->
   <header>
@@ -45,7 +43,6 @@
           <a class="navLink" href="index.html"> Home </a>
           <a class="navLink" href="categories.html"> categories </a>
           <a class="navLink" href="listing.html"> listing </a>
-          <a class="navLink" href="posts.html"> Posts </a>
           <a class="navLink" href="chats.html"> Chats </a>
           <a class="navLink" href="contactUs.html"> contact us </a>
         </ul>
@@ -61,10 +58,10 @@
           </button>
           <div class="dropdown-menu" aria-labelledby="myAccount">
             <a href="login.html" class="dropdown-item"> login </a>
-            <a href="profile.html" class="dropdown-item"> profile </a>
+            <a href="myPosts.html" class="dropdown-item"> My Posts</a>
             <a href="notifications.html" class="dropdown-item"> notifications </a>
-            <a href="editProfile.html" class="dropdown-item"> <img src="img/icons/editProfile.svg" alt=""> edit Profile </a>
-            <a href="#!" class="dropdown-item"> <img src="img/icons/logout.svg" alt=""> logout </a>
+            <a href="editmyPosts.html" class="dropdown-item"> edit Profile </a>
+            <a href="login.html" class="dropdown-item"> logout </a>
           </div>
         </div>
         <a href="#!" class="link" data-bs-toggle="tooltip" title=" language "> ع </a>
@@ -257,6 +254,7 @@
                     </p>
                     <div class="location"> <img src="img/icons/location.svg" alt=""> <span> USA, California </span>
                     </div>
+                    <span class="promoted"> promoted </span>
                     <div class="itemBottom">
                       <a href="listing.html" class="category"> <span class="img"> <img src="img/categories/icon (1).svg"
                             alt="">
@@ -338,6 +336,7 @@
                     </p>
                     <div class="location"> <img src="img/icons/location.svg" alt=""> <span> USA, California </span>
                     </div>
+                    <span class="promoted"> promoted </span>
                     <div class="itemBottom">
                       <a href="listing.html" class="category"> <span class="img"> <img src="img/categories/icon (1).svg"
                             alt="">
@@ -392,6 +391,7 @@
                     </p>
                     <div class="location"> <img src="img/icons/location.svg" alt=""> <span> USA, California </span>
                     </div>
+                    <span class="promoted"> promoted </span>
                     <div class="itemBottom">
                       <a href="listing.html" class="category"> <span class="img"> <img src="img/categories/icon (1).svg"
                             alt="">
@@ -419,6 +419,7 @@
                     </p>
                     <div class="location"> <img src="img/icons/location.svg" alt=""> <span> USA, California </span>
                     </div>
+                    <span class="promoted"> promoted </span>
                     <div class="itemBottom">
                       <a href="listing.html" class="category"> <span class="img"> <img src="img/categories/icon (1).svg"
                             alt="">
@@ -446,6 +447,7 @@
                     </p>
                     <div class="location"> <img src="img/icons/location.svg" alt=""> <span> USA, California </span>
                     </div>
+                    <span class="promoted"> promoted </span>
                     <div class="itemBottom">
                       <a href="listing.html" class="category"> <span class="img"> <img src="img/categories/icon (1).svg"
                             alt="">
@@ -473,6 +475,7 @@
                     </p>
                     <div class="location"> <img src="img/icons/location.svg" alt=""> <span> USA, California </span>
                     </div>
+                    <span class="promoted"> promoted </span>
                     <div class="itemBottom">
                       <a href="listing.html" class="category"> <span class="img"> <img src="img/categories/icon (1).svg"
                             alt="">
@@ -597,5 +600,4 @@
   <script src="js/main.js"></script>
   <script src="js/custom.js"></script>
 </body>
-
 </html>
