--- a/advertiser.html
+++ b/advertiser.html
@@ -60,9 +60,12 @@
           </button>
           <div class="dropdown-menu" aria-labelledby="myAccount">
             <a href="login.html" class="dropdown-item"> login </a>
-            <a href="myPosts.html" class="dropdown-item"> My Posts</a>
+            <a href="myPosts.html" class="dropdown-item"> my posts </a>
             <a href="notifications.html" class="dropdown-item"> notifications </a>
-            <a href="editmyPosts.html" class="dropdown-item"> edit Profile </a>
+            <a href="bought.html" class="dropdown-item"> Bought </a>
+            <a href="favorite.html" class="dropdown-item"> Favorite </a>
+            <a href="truYou.html" class="dropdown-item"> TruYou </a>
+            <a href="editProfile.html" class="dropdown-item"> edit Profile </a>
             <a href="login.html" class="dropdown-item"> logout </a>
           </div>
         </div>
