--- a/notifications.html
+++ b/notifications.html
@@ -60,7 +60,7 @@
                         <img src="img/icons/user.svg" alt="">
                     </button>
                     <div class="dropdown-menu" aria-labelledby="myAccount">
-                             <a href="login.html" class="dropdown-item"> login </a>
+                        <a href="login.html" class="dropdown-item"> login </a>
                         <a href="myPosts.html" class="dropdown-item"> my posts </a>
                         <a href="notifications.html" class="dropdown-item"> notifications </a>
                         <a href="bought.html" class="dropdown-item"> Bought </a>
@@ -96,13 +96,11 @@
                     <!-- links -->
                     <div class="col-md-5 col-lg-4 col-xl-3 p-1">
                         <!-- user Header  -->
-                        <div class=" userHeader">
-                            <div class="userInfo">
-                                <img class="userImg" src="img/placeholder.svg" alt="">
-                                <div class="userName">
-                                    <h4 class="name"> Mahmoud Elkomy </h4>
-                                    <span class="phone"> +1 0123456789 </span>
-                                </div>
+                        <div class="userInfo">
+                            <img class="userImg" src="img/placeholder.svg" alt="">
+                            <div class="userName">
+                                <h4 class="name"> Mahmoud Elkomy </h4>
+                                <span class="phone"> +1 0123456789 </span>
                             </div>
                         </div>
                         <div class="profileNavCol">
@@ -118,6 +116,46 @@
                     </div>
                     <!-- content -->
                     <div class=" col-md-7 col-lg-8 col-xl-9 p-2 profileContent">
+                        <div class="notifications">
+                            <ul>
+                                <li class="notification" data-aos="fade-up">
+                                    <h6 class="notificationTitle"> Notification Title </h6>
+                                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis ex ea qui.
+                                        Consequuntur accusantium nisi a repellendus! Nam aliquid sequi, beatae totam
+                                        quae consectetur mollitia earum voluptas debitis ipsum reiciendis! </p>
+                                    <span class="date"> 20-12-2024 10:45pm </span>
+                                </li>
+                                <li class="notification" data-aos="fade-up">
+                                    <h6 class="notificationTitle"> Notification Title </h6>
+                                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis ex ea qui.
+                                        Consequuntur accusantium nisi a repellendus! Nam aliquid sequi, beatae totam
+                                        quae consectetur mollitia earum voluptas debitis ipsum reiciendis! </p>
+                                    <span class="date"> 20-12-2024 10:45pm </span>
+                                </li>
+                                <li class="notification" data-aos="fade-up">
+                                    <h6 class="notificationTitle"> Notification Title </h6>
+                                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis ex ea qui.
+                                        Consequuntur accusantium nisi a repellendus! Nam aliquid sequi, beatae totam
+                                        quae consectetur mollitia earum voluptas debitis ipsum reiciendis! </p>
+                                    <span class="date"> 20-12-2024 10:45pm </span>
+                                </li>
+                                <li class="notification" data-aos="fade-up">
+                                    <h6 class="notificationTitle"> Notification Title </h6>
+                                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis ex ea qui.
+                                        Consequuntur accusantium nisi a repellendus! Nam aliquid sequi, beatae totam
+                                        quae consectetur mollitia earum voluptas debitis ipsum reiciendis! </p>
+                                    <span class="date"> 20-12-2024 10:45pm </span>
+                                </li>
+                                <li class="notification" data-aos="fade-up">
+                                    <h6 class="notificationTitle"> Notification Title </h6>
+                                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis ex ea qui.
+                                        Consequuntur accusantium nisi a repellendus! Nam aliquid sequi, beatae totam
+                                        quae consectetur mollitia earum voluptas debitis ipsum reiciendis! </p>
+                                    <span class="date"> 20-12-2024 10:45pm </span>
+                                </li>
+
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
