--- a/editProfile.html
+++ b/editProfile.html
@@ -60,7 +60,7 @@
                         <img src="img/icons/user.svg" alt="">
                     </button>
                     <div class="dropdown-menu" aria-labelledby="myAccount">
-                             <a href="login.html" class="dropdown-item"> login </a>
+                        <a href="login.html" class="dropdown-item"> login </a>
                         <a href="myPosts.html" class="dropdown-item"> my posts </a>
                         <a href="notifications.html" class="dropdown-item"> notifications </a>
                         <a href="bought.html" class="dropdown-item"> Bought </a>
@@ -96,13 +96,11 @@
                     <!-- links -->
                     <div class="col-md-5 col-lg-4 col-xl-3 p-1">
                         <!-- user Header  -->
-                        <div class=" userHeader">
-                            <div class="userInfo">
-                                <img class="userImg" src="img/placeholder.svg" alt="">
-                                <div class="userName">
-                                    <h4 class="name"> Mahmoud Elkomy </h4>
-                                    <span class="phone"> +1 0123456789 </span>
-                                </div>
+                        <div class="userInfo">
+                            <img class="userImg" src="img/placeholder.svg" alt="">
+                            <div class="userName">
+                                <h4 class="name"> Mahmoud Elkomy </h4>
+                                <span class="phone"> +1 0123456789 </span>
                             </div>
                         </div>
                         <div class="profileNavCol">
@@ -118,6 +116,24 @@
                     </div>
                     <!-- content -->
                     <div class=" col-md-7 col-lg-8 col-xl-9 p-2 profileContent">
+                        <form class="cardForm" data-aos="fade-up">
+                            <div class="profileImage">
+                                <input type="file" id="profileImageInput" accept="image/*" />
+                                <label for="profileImageInput" class="profileImageLabel">
+                                    <img src="img/users/user (3).png" alt="Profile Image" id="profileImagePreview" />
+                                </label>
+                                <span><img src="img/icons/plus.svg" alt=""></span>
+                            </div>
+                            <div class="formGroup">
+                                <input type="text" class="form-control" name="" value="Mahmoud Elkomy" id="name" placeholder="User Name">
+                            </div>
+                            <div class="formGroup">
+                                <input type="text" class="form-control" name="" id="location" placeholder="Location"
+                                    oninput="geocodeAddress()">
+                            </div>
+                            <div id="mapView"></div>
+                            <button type="submit" class="customBtn mt-4">Confirm</button>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -208,6 +224,227 @@
     <!-- main -->
     <script src="js/main.js"></script>
     <script src="js/custom.js"></script>
+    <script>
+        let map;
+        let marker;
+        let geocoder;
+        function initMap() {
+            map = new google.maps.Map(document.getElementById('mapView'), {
+                zoom: 14,
+                mapTypeControl: false,
+                streetViewControl: false,
+                // styles: [
+                //   {
+                //     "elementType": "geometry",
+                //     "stylers": [
+                //       {
+                //         "color": "#f5f5f5"
+                //       }
+                //     ]
+                //   },
+                //   {
+                //     "elementType": "labels.icon",
+                //     "stylers": [
+                //       {
+                //         "visibility": "off"
+                //       }
+                //     ]
+                //   },
+                //   {
+                //     "elementType": "labels.text.fill",
+                //     "stylers": [
+                //       {
+                //         "color": "#616161"
+                //       }
+                //     ]
+                //   },
+                //   {
+                //     "elementType": "labels.text.stroke",
+                //     "stylers": [
+                //       {
+                //         "color": "#f5f5f5"
+                //       }
+                //     ]
+                //   },
+                //   {
+                //     "featureType": "administrative.land_parcel",
+                //     "elementType": "labels.text.fill",
+                //     "stylers": [
+                //       {
+                //         "color": "#bdbdbd"
+                //       }
+                //     ]
+                //   },
+                //   {
+                //     "featureType": "poi",
+                //     "elementType": "geometry",
+                //     "stylers": [
+                //       {
+                //         "color": "#eeeeee"
+                //       }
+                //     ]
+                //   },
+                //   {
+                //     "featureType": "poi",
+                //     "elementType": "labels.text.fill",
+                //     "stylers": [
+                //       {
+                //         "color": "#757575"
+                //       }
+                //     ]
+                //   },
+                //   {
+                //     "featureType": "poi.park",
+                //     "elementType": "geometry",
+                //     "stylers": [
+                //       {
+                //         "color": "#e5e5e5"
+                //       }
+                //     ]
+                //   },
+                //   {
+                //     "featureType": "poi.park",
+                //     "elementType": "labels.text.fill",
+                //     "stylers": [
+                //       {
+                //         "color": "#9e9e9e"
+                //       }
+                //     ]
+                //   },
+                //   {
+                //     "featureType": "road",
+                //     "elementType": "geometry",
+                //     "stylers": [
+                //       {
+                //         "color": "#ffffff"
+                //       }
+                //     ]
+                //   },
+                //   {
+                //     "featureType": "road.arterial",
+                //     "elementType": "labels.text.fill",
+                //     "stylers": [
+                //       {
+                //         "color": "#757575"
+                //       }
+                //     ]
+                //   },
+                //   {
+                //     "featureType": "road.highway",
+                //     "elementType": "geometry",
+                //     "stylers": [
+                //       {
+                //         "color": "#dadada"
+                //       }
+                //     ]
+                //   },
+                //   {
+                //     "featureType": "road.highway",
+                //     "elementType": "labels.text.fill",
+                //     "stylers": [
+                //       {
+                //         "color": "#616161"
+                //       }
+                //     ]
+                //   },
+                //   {
+                //     "featureType": "road.local",
+                //     "elementType": "labels.text.fill",
+                //     "stylers": [
+                //       {
+                //         "color": "#9e9e9e"
+                //       }
+                //     ]
+                //   },
+                //   {
+                //     "featureType": "transit.line",
+                //     "elementType": "geometry",
+                //     "stylers": [
+                //       {
+                //         "color": "#e5e5e5"
+                //       }
+                //     ]
+                //   },
+                //   {
+                //     "featureType": "transit.station",
+                //     "elementType": "geometry",
+                //     "stylers": [
+                //       {
+                //         "color": "#eeeeee"
+                //       }
+                //     ]
+                //   },
+                //   {
+                //     "featureType": "water",
+                //     "elementType": "geometry",
+                //     "stylers": [
+                //       {
+                //         "color": "#c9c9c9"
+                //       }
+                //     ]
+                //   },
+                //   {
+                //     "featureType": "water",
+                //     "elementType": "labels.text.fill",
+                //     "stylers": [
+                //       {
+                //         "color": "#9e9e9e"
+                //       }
+                //     ]
+                //   }
+                // ],
+            });
+            geocoder = new google.maps.Geocoder();
+            marker = new google.maps.Marker({
+                map: map,
+                draggable: true
+            });
+            marker.addListener('dragend', function () {
+                geocodeLatLng(marker.getPosition());
+            });
+            // Get current location and set it as the initial center
+            getGeoLocation();
+        }
+        function getGeoLocation() {
+            if (navigator.geolocation) {
+                navigator.geolocation.getCurrentPosition(function (position) {
+                    const pos = {
+                        lat: position.coords.latitude,
+                        lng: position.coords.longitude
+                    };
+                    map.setCenter(pos);
+                    marker.setPosition(pos);
+                    geocodeLatLng(pos); // Reverse geocode the current position
+                }, function () {
+                    console.log('Geolocation service failed. Using default location.');
+                });
+            } else {
+                console.log('Browser does not support Geolocation. Using default location.');
+            }
+        }
+        function geocodeAddress() {
+            const address = document.getElementById('location').value;
+            geocoder.geocode({ 'address': address }, function (results, status) {
+                if (status === 'OK' && results[0]) {
+                    map.setCenter(results[0].geometry.location);
+                    marker.setPosition(results[0].geometry.location);
+                } else {
+                    console.log('Geocode was not successful for the following reason: ' + status);
+                }
+            });
+        }
+        function geocodeLatLng(latlng) {
+            geocoder.geocode({ 'location': latlng }, function (results, status) {
+                if (status === 'OK' && results[0]) {
+                    document.getElementById('location').value = results[0].formatted_address;
+                } else {
+                    console.log('Geocoder failed due to: ' + status);
+                }
+            });
+        }
+    </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY_HERE&language=en&callback=initMap" async
+        defer></script>
 </body>
 
 </html>
