--- a/itemDetails.html
+++ b/itemDetails.html
@@ -49,7 +49,7 @@
       </nav>
       <!-- Actions -->
       <div class="moreActions">
-        <a href="#!" class="link" data-bs-toggle="tooltip" title=" add post "> <img src="img/icons/plus.svg" alt="">
+        <a href="addPost.html" class="link" data-bs-toggle="tooltip" title=" add post "> <img src="img/icons/plus.svg" alt="">
         </a>
         <div class="dropdown">
           <button class=" dropdown-toggle link" type="button" id="myAccount" data-bs-toggle="dropdown"
@@ -285,7 +285,7 @@
               </a>
               <span class="date"> Member S. Nov 24, 2020 </span>
               <div class="contact">
-                <a href="#!" class="chat">
+                <a href="chats.html" class="chat">
                   <img src="img/icons/chat.svg" alt="">
                   <span> chat </span>
                 </a>
