--- a/chats.html
+++ b/chats.html
@@ -51,7 +51,7 @@
       </nav>
       <!-- Actions -->
       <div class="moreActions">
-        <a href="#!" class="link" data-bs-toggle="tooltip" title=" add post "> <img src="img/icons/plus.svg" alt="">
+        <a href="addPost.html" class="link" data-bs-toggle="tooltip" title=" add post "> <img src="img/icons/plus.svg" alt="">
         </a>
         <div class="dropdown">
           <button class=" dropdown-toggle link" type="button" id="myAccount" data-bs-toggle="dropdown"
