--- a/myPosts.html
+++ b/myPosts.html
@@ -50,10 +50,25 @@
                 </ul>
             </nav>
             <!-- Actions -->
-            <div class="moreActions">
-                <a href="addPost.html" class="link" data-bs-toggle="tooltip" title=" add post "> <img src="img/icons/plus.svg"
-                        alt="">
-                </a>
+                        <div class="moreActions">
+                <div class="dropdown">
+                    <button class=" dropdown-toggle link text" type="button" id="addPost" data-bs-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">
+                        <img src="img/icons/plus.svg" alt="">
+                        Add Post
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="addPost">
+                        <p> what do you want ? </p>
+                        <a href="addPost.html" class="dropdown-item">
+                            <img src="img/icons/wanted.svg" alt="">
+                            Wanted
+                        </a>
+                        <a href="addPost.html" class="dropdown-item">
+                            <img src="img/icons/sell.svg" alt="">
+                            Sell
+                        </a>
+                    </div>
+                </div>
                 <div class="dropdown">
                     <button class=" dropdown-toggle link" type="button" id="myAccount" data-bs-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">
@@ -70,7 +85,6 @@
                         <a href="login.html" class="dropdown-item"> logout </a>
                     </div>
                 </div>
-                <a href="#!" class="link" data-bs-toggle="tooltip" title=" language "> ع </a>
             </div>
         </section>
     </header>
