--- a/register.html
+++ b/register.html
@@ -50,42 +50,42 @@
         </ul>
       </nav>
       <!-- Actions -->
-                  <div class="moreActions">
-                <div class="dropdown">
-                    <button class=" dropdown-toggle link text" type="button" id="addPost" data-bs-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
-                        <img src="img/icons/plus.svg" alt="">
-                        Add Post
-                    </button>
-                    <div class="dropdown-menu" aria-labelledby="addPost">
-                        <p> what do you want ? </p>
-                        <a href="addPost.html" class="dropdown-item">
-                            <img src="img/icons/wanted.svg" alt="">
-                            Wanted
-                        </a>
-                        <a href="addPost.html" class="dropdown-item">
-                            <img src="img/icons/sell.svg" alt="">
-                            Sell
-                        </a>
-                    </div>
-                </div>
-                <div class="dropdown">
-                    <button class=" dropdown-toggle link" type="button" id="myAccount" data-bs-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
-                        <img src="img/icons/user.svg" alt="">
-                    </button>
-                    <div class="dropdown-menu" aria-labelledby="myAccount">
-                        <a href="login.html" class="dropdown-item"> login </a>
-                        <a href="myPosts.html" class="dropdown-item"> my posts </a>
-                        <a href="notifications.html" class="dropdown-item"> notifications </a>
-                        <a href="bought.html" class="dropdown-item"> Bought </a>
-                        <a href="favorite.html" class="dropdown-item"> Favorite </a>
-                        <a href="truYou.html" class="dropdown-item"> TruYou </a>
-                        <a href="editProfile.html" class="dropdown-item"> edit Profile </a>
-                        <a href="login.html" class="dropdown-item"> logout </a>
-                    </div>
-                </div>
-            </div>
+      <div class="moreActions">
+        <div class="dropdown">
+          <button class=" dropdown-toggle link text" type="button" id="addPost" data-bs-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            <img src="img/icons/plus.svg" alt="">
+            Add Post
+          </button>
+          <div class="dropdown-menu" aria-labelledby="addPost">
+            <p> what do you want ? </p>
+            <a href="addPost.html" class="dropdown-item">
+              <img src="img/icons/wanted.svg" alt="">
+              Wanted
+            </a>
+            <a href="addPost.html" class="dropdown-item">
+              <img src="img/icons/sell.svg" alt="">
+              Sell
+            </a>
+          </div>
+        </div>
+        <div class="dropdown">
+          <button class=" dropdown-toggle link" type="button" id="myAccount" data-bs-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            <img src="img/icons/user.svg" alt="">
+          </button>
+          <div class="dropdown-menu" aria-labelledby="myAccount">
+            <a href="login.html" class="dropdown-item"> login </a>
+            <a href="myPosts.html" class="dropdown-item"> my posts </a>
+            <a href="notifications.html" class="dropdown-item"> notifications </a>
+            <a href="bought.html" class="dropdown-item"> Bought </a>
+            <a href="favorite.html" class="dropdown-item"> Favorite </a>
+            <a href="truYou.html" class="dropdown-item"> TruYou </a>
+            <a href="editProfile.html" class="dropdown-item"> edit Profile </a>
+            <a href="login.html" class="dropdown-item"> logout </a>
+          </div>
+        </div>
+      </div>
     </section>
   </header>
   <!--(((((((((((((((((((((((()))))))))))))))))))))))-->
@@ -121,8 +121,8 @@
               <div class="formGroup">
                 <input type="text" class="form-control" name="" id="location" placeholder="Location"
                   oninput="geocodeAddress()">
+                <div id="mapView"></div>
               </div>
-              <div id="mapView"></div>
               <button type="submit" class="customBtn mt-4">Confirm</button>
             </form>
           </div>
@@ -434,9 +434,8 @@
       });
     }
   </script>
-  <script
-    src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY_HERE&language=en&callback=initMap"
-    async defer></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY_HERE&language=en&callback=initMap" async
+    defer></script>
 
 </body>
 
